--- a/Exercice5/index.html
+++ b/Exercice5/index.html
@@ -24,6 +24,6 @@
     <img src="assets/image.png" alt="Description de l'image" height="250">
 
     <!-- Lien avec texte descriptif -->
-    <a href="https://example.com">Visitez notre site web</a>
+    <a href="https://example.com" title="Visitez notre site web">Visitez notre site web</a>
 </body>
 </html>
